syntax = "proto3";
package request;

option go_package = "github.com/enchant97/file-sync-protocol/prototypes/proto-3/pbtypes";

// Init a new connection, send capabilities
message ReqSyn {
    uint64 id = 1;
    uint32 max_mtu = 2;
}

// Leave
message ReqFin {
    uint64 id = 1;
}

// A request to push a file
message ReqPsh {
    uint64 id = 1;
    string path = 2;
    uint64 size = 3;
}

// A chunk
message ReqPshDat {
    uint64 request_id = 1;
    uint64 block_id = 2;
    uint64 chunk_id = 3;
}

// Request to validate a block
message ReqPshVal {
    uint64 request_id = 1;
    uint64 sub_request_id = 2;
    uint64 block_id = 3;
    uint64 last_chunk_id = 4;
}

// Mark file as finished
message ReqPshEof {
    uint64 request_id = 1;
}
